syntax = "proto3";
package activity;

import "google/protobuf/struct.proto";

option go_package = "phoenix-marketplace-api/types/activvity";

message ActivityInfo {
  string type = 1;
  string timestamp = 2;
  google.protobuf.Struct details = 3;
}

message ActivityAtNftRequest {
  string collection_address = 1;
  string nft_id = 2;
}

message ActivityAtNftResponse { repeated ActivityInfo activity = 1; }